      respect to that group. (CNY-2520)
    * TroveFilters now exist. Trove filters allow a packager to
      reference particular troves within a group for group policy
      inclusions/exceptions. (CNY-2477)
    * Conary policy to fix trailing newlines in config files has been
      corrected to handle non-writeable config files. (CNY-2559)

Changes in 2.0.7:
  o Build Changes:
    * Handling pkg-config dependencies has been moved to conary-policy.
      (CNP-93)

  o Bug Fixes:
    * When resuming the update after the execution of a critical update,
      Conary will now use the original file replacement flags. This
      corrects file conflict errors in a migrate when a critical update
      was present. (CNY-2513)
    * The lazy file cache was using /proc/self/fd as a method of
      determining the number of open file descriptors for the current
      process. However, under certain circumstances the directory is not
      readable. The lazy file cache now uses a poll(2)-based technique.
      (CNY-2536)
    * If the directory where the public keyring is stored does not exist,
      it is now automatically created. (CNY-2504)

  o Other changes:
    * Reading metadata from RPM files now validates the size of the RPM
      and the sha1 of the full set of metadata.

Changes in 2.0.6:
  o Build Changes:
    * Java dependencies for classes that are not dependency-complete
      are now automatically disabled. To re-enable them, the missing
      dependencies should be added as buildRequires. (CNY-2175)
    * Build actions that do not match anything (r.Move, r.Copy, etc.)
      will now log exactly what they were trying to do. (CNY-2216)

  o Bug Fixes:
    * A minor bug in the display of the password prompt has been fixed.
      (CNY-2497)
    * When x86_64 is specified and a biarch package is available, Conary
      will mention the biarch as an alternative flavor instead of the x86 one.
    * Derived packages will now work on x86_64 systems even if a biarch 