@@ -465,6 +465,13 @@ class CfgSearchPathItem(CfgType):
         return item
 CfgSearchPath = CfgLineList(CfgSearchPathItem)
 
+def _getDefaultPublicKeyrings():
+    publicKeyrings = []
+    if 'HOME' in os.environ:
+        publicKeyrings.append('~/.gnupg/pubring.gpg')
+    publicKeyrings.append('/etc/conary/pubring.gpg')
+    return publicKeyrings
+
 class ConaryContext(ConfigSection):
     """ Conary uses context to let the value of particular config parameters
         be set based on a keyword that can be set at the command line.
@@ -526,9 +533,10 @@ class ConaryContext(ConfigSection):
     conaryProxy           =  CfgProxy
     # HTTP proxy
     proxy                 =  CfgProxy
-    pubRing               =  (CfgPathList, [ \
-        ('/etc/conary/pubring.gpg',
-         '~/.gnupg/pubring.gpg')[int(bool(os.getuid()))]])
+    # The first keyring in the list is writable, and is used for storing the
+    # keys that are not present on the system-wide keyring. Always expect
+    # Conary to write to the first keyring.
+    pubRing               =  (CfgPathList, _getDefaultPublicKeyrings())
     uploadRateLimit       =  (CfgInt, 0)
     downloadRateLimit     =  (CfgInt, 0)
 
