@@ -1004,6 +1004,7 @@ class CvcMain(command.MainHandler):
             del argSet['profile']
 
         keyCache = openpgpkey.getKeyCache()
+        keyCache.setPublicPath(cfg.pubRing)
         repos = conaryclient.ConaryClient(cfg).getRepos()
         keyCacheCallback = openpgpkey.KeyCacheCallback(repos,
                                                        cfg)
